[Before merge with batching branch] Adding record based reads and writes.